Just added a comment

--- a/QSiddharthJD.tex
+++ b/QSiddharthJD.tex
@@ -120,7 +120,7 @@ For a full discussion, including a historical overview, we refer to {\color{red}
 
 
 
-
+%Just adding few comments to practice git
 
 
 
