made some changes in master branch

--- a/QSiddharthJD.tex
+++ b/QSiddharthJD.tex
@@ -122,6 +122,8 @@ For a full discussion, including a historical overview, we refer to {\color{red}
 
 %Just adding few comments to practice git
 
+% This change is made directly in to the master branch just to learn some command line preferences
+
 
 
 
