--- a/QSiddharthJD.tex
+++ b/QSiddharthJD.tex
@@ -123,6 +123,8 @@ For a full discussion, including a historical overview, we refer to {\color{red}
 %Just adding few comments to practice git
 
 % This change is made directly in to the master branch just to learn some command line preferences
+% I pulled the changed file from master branch on the remote
+% Now I made some changes locally and I will push them to remote
 
 
 
