some new changes

--- a/QSiddharthJD.tex
+++ b/QSiddharthJD.tex
@@ -125,6 +125,8 @@ For a full discussion, including a historical overview, we refer to {\color{red}
 % This change is made directly in to the master branch just to learn some command line preferences
 % I pulled the changed file from master branch on the remote
 % Now I made some changes locally and I will push them to remote
+% Well again I am making some changes from tangential_method branch locally and I'll push this to remote
+
 
 
 
