--- a/QSiddharthJD.tex
+++ b/QSiddharthJD.tex
@@ -126,7 +126,7 @@ For a full discussion, including a historical overview, we refer to {\color{red}
 % I pulled the changed file from master branch on the remote
 % Now I made some changes locally and I will push them to remote
 % Well again I am making some changes from tangential_method branch locally and I'll push this to remote
-
+% Some work though new-branch branch.
 
 
 
